git branch -M main

--- a/angular.json
+++ b/angular.json
@@ -90,12 +90,17 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "39e32afe-0681-4840-95bf-42d784ffc2d8"
   }
 }
