--- a/package.json
+++ b/package.json
@@ -18,7 +18,17 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "flowbite": "^2.5.1",
+    "framer-motion": "^11.3.24",
+    "lucide-react": "^0.427.0",
+    "ngx-marquee": "^13.2.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.8",
     "rxjs": "~7.8.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -27,12 +37,15 @@
     "@angular/cli": "^17.0.1",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.9",
     "typescript": "~5.2.2"
   }
 }
